--- a/discloud.config
+++ b/discloud.config
@@ -1,3 +1,9 @@
-TYPE=python
-MAIN=main.py
+NAME=Minha API
+AVATAR=
+TYPE=site
 ID=streamflix
+MAIN=main.py
+RAM=512
+AUTORESTART=true
+VERSION=latest
+APT=tools
